# DuckyShop

./: README.md
FPIFase1/: CMakeLists.txt  main.cpp  teste.cpp  teste.hpp
FPIFase2/: CMakeLists.txt  Histogram.cpp  Histogram.hpp  ImageEditingManager.cpp  ImageEditingManager.hpp  ImageMatrix.cpp  ImageMatrix.hpp  main.cpp
